--- a/src/components/userList/UserList.scss
+++ b/src/components/userList/UserList.scss
@@ -1,8 +1,11 @@
+/* UserList.scss */
 
 .UserList {
      font-size: large;
+
      h2 {
           margin-bottom: 20px;
+          color: white;
      }
 
      p {
@@ -10,24 +13,92 @@
      }
 
      .search-sort-container {
+          width: 100%;
           display: flex;
           align-items: center;
-          justify-content: space-around;
+          justify-content: space-between;
           margin-bottom: 10px;
+          padding-left: 50px;
 
-          input[type="text"] {
-               padding: 5px;
-               width: 290px;
-               margin-right: 10px;
-               outline: #6C63AC;
+          .searchSort-1 {
+               width: 50%;
+               display: flex;
+               justify-content: flex-start;
 
-              &:focus{
-               outline: #6C63AC;
-              }
+               input[type="text"] {
+                    padding: 5px;
+                    width: 290px;
+                    margin-right: 10px;
+                    outline: none;
+
+                    &:focus {
+                         outline: none;
+                         border-color: #6C63AC;
+                         box-shadow: 0 0 0 2px #6C63AC40;
+                    }
+               }
+
+               select {
+                    padding: 5px;
+               }
           }
 
-          select {
-               padding: 5px;
+          .searchSort-2 {
+               width: 50%;
+               display: flex;
+          justify-content: flex-end;
+          padding-right: 60px;
+
+               .addUser-input {
+                    width: 70%;
+                    margin-top: 20px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    gap: 10px;
+
+
+
+                    label {
+                         display: block;
+                         margin-bottom: 5px;
+                    }
+
+                    input[type="text"],
+                    input[type="date"],
+                    button {
+                         padding: 10px;
+                         margin-bottom: 10px;
+                         width: 130px;
+                         height: 30px;
+                    }
+
+                    input[type="text"],
+                    input[type="date"] {
+                         width: 100%;
+                         border: 1px solid #ccc;
+                         border-radius: 5px;
+                         width: 130px;
+                         height: 30px;
+
+                         &:focus {
+                              outline: none;
+                              border-color: #6C63AC;
+                              box-shadow: 0 0 0 2px #6C63AC40;
+                         }
+                    }
+
+                    button {
+                         background-color: #f2f2f2;
+                         border: none;
+                         border-radius: 5px;
+                         cursor: pointer;
+
+                         &:hover {
+                              background-color: #e0e0e0;
+                         }
+                    }
+               }
           }
      }
 
@@ -36,21 +107,39 @@
           border: 1px solid #f9f9f9;
           border-collapse: collapse;
           margin-bottom: 20px;
+          font-weight: 800;
 
           th {
                background-color: #f2f2f2;
                padding: 10px;
                text-align: center;
+               color: black;
           }
 
           tr {
+               color: white;
+
                &:nth-child(even) {
                     background-color: #f9f9f9;
+                    color: #6C63AC;
+
+                    .delete-button {
+                         color: #6C63AC;
+                    }
                }
 
                td {
                     padding: 10px;
+
+                    .delete-button {
+                         color: white;
+                         cursor: pointer;
+                    }
                }
           }
      }
+
+
+
+
 }
