--- a/src/components/dashboardMain/DashboardMain.scss
+++ b/src/components/dashboardMain/DashboardMain.scss
@@ -22,8 +22,7 @@
                     color: #4634ce;
                }
           }
-          
-
+     
      }
 
      .dashboard-content {
@@ -34,7 +33,7 @@
           gap: 10px;
 
           .logout {
-
+padding: 20px 30px 0px;
                display: flex;
                justify-content: flex-end;
 
