--- a/src/pages/userMain/UserMain.scss
+++ b/src/pages/userMain/UserMain.scss
@@ -1,16 +1,16 @@
 .userMain-container {
-     font-size: medium;
+     font-size: large;
      padding: 10px 190px;
 
      h2 {
-          margin-bottom: 20px;
+          margin-bottom: 20px;     
           color: white;
      }
 
      .header{
-          width: 100%;
+          width: 100%;   
           display: flex; 
-          gap: 230px;
+          gap: 220px;
           margin-bottom: 15px;
      }
 }
