--- a/src/components/dashboardMain/DashboardMain.scss
+++ b/src/components/dashboardMain/DashboardMain.scss
@@ -1,20 +1,21 @@
 .dashboardMain-container {
      display: flex;
 
-
      .dashboard-options {
-
+          font-size: 18px;
           width: 15%;
           height: 100vh;
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           gap: 50px;
-          background-color: white;
+          // background-color: white;
+          background-color: rgb(182, 182, 226);
           padding: 80px 20px 20px;
 
           h3 {
-               color: #6C63AC;
+               // color: #6C63AC;
+               color: white   ;
                display: flex;
                gap: 5px;
 
@@ -22,18 +23,18 @@
                     color: #4634ce;
                }
           }
-     
      }
 
      .dashboard-content {
           width: 85%;
-          background-color: rgb(182, 182, 226);
+          // background-color: rgb(182, 182, 226);
+          background-color: white;
           display: flex;
           flex-direction: column;
           gap: 10px;
 
           .logout {
-padding: 20px 30px 0px;
+               padding: 20px 30px 0px;
                display: flex;
                justify-content: flex-end;
 
@@ -48,8 +49,6 @@ padding: 20px 30px 0px;
                          background-color: #e0e0e0;
                     }
                }
-
           }
-          
      }
 }
