--- a/src/pages/userMain/UserMain.scss
+++ b/src/pages/userMain/UserMain.scss
@@ -4,7 +4,8 @@
 
      h2 {
           margin-bottom: 20px;     
-          color: white;
+          // color: white;
+        color: #6C63AC;
      }
 
      .header{
